@@ -1091,7 +1091,7 @@
                 "url": "/website/page_counselAndFeedback.html"
             },
             {
-                "banner": "counselAndFeedback",
+                "banner": "jobs",
                 "bannerTitleClass": "title",
                 "banner_title": "",
                 "code": "005003",
@@ -1107,7 +1107,7 @@
                 "sl_url": "",
                 "submenus": [
                     {
-                        "banner": "counselAndFeedback",
+                        "banner": "jobs",
                         "bannerTitleClass": "title",
                         "banner_title": "",
                         "code": "005003001",
@@ -1115,18 +1115,18 @@
                         "id": 59,
                         "name": "zhiyefazhan",
                         "newsId": "",
-                        "pageId": "",
+                        "pageId": "20",
                         "parentCode": "005003",
-                        "parentId": 0,
+                        "parentId": 20,
                         "showName": "职业发展",
                         "sl_cid": "",
-                        "sl_url": "",
+                        "sl_url": "http://m.shenglong-electric.com.cn/jobs/detail/page_id/20",
                         "submenus": [],
                         "type": 1,
                         "url": "/website/page_template.html"
                     },
                     {
-                        "banner": "counselAndFeedback",
+                        "banner": "jobs",
                         "bannerTitleClass": "title",
                         "banner_title": "",
                         "code": "005003002",
@@ -1134,18 +1134,18 @@
                         "id": 60,
                         "name": "xiaoyuanzhaopin",
                         "newsId": "",
-                        "pageId": "",
+                        "pageId": "32",
                         "parentCode": "005003",
-                        "parentId": 0,
+                        "parentId": 32,
                         "showName": "校园招聘",
                         "sl_cid": "",
-                        "sl_url": "",
+                        "sl_url": "http://m.shenglong-electric.com.cn/jobs/detail/page_id/32",
                         "submenus": [],
                         "type": 1,
                         "url": "/website/page_template.html"
                     },
                     {
-                        "banner": "counselAndFeedback",
+                        "banner": "jobs",
                         "bannerTitleClass": "title",
                         "banner_title": "",
                         "code": "005003003",
@@ -1153,12 +1153,12 @@
                         "id": 61,
                         "name": "shehuizhaopin",
                         "newsId": "",
-                        "pageId": "",
+                        "pageId": "31",
                         "parentCode": "005003",
-                        "parentId": 0,
+                        "parentId": 33,
                         "showName": "社会招聘",
                         "sl_cid": "",
-                        "sl_url": "",
+                        "sl_url": "http://m.shenglong-electric.com.cn/jobs/detail/page_id/31",
                         "submenus": [],
                         "type": 1,
                         "url": "/website/page_template.html"
