@@ -37,6 +37,14 @@
 	background-position: 0px 0px;
 	background-size: 320px 164px;
 }
+.slider > .jobs{
+    display: block;
+    width: 100%;
+	height: 164px;
+	background: url(../uploads/2013/03/banner-2.jpg) no-repeat;
+	background-position: -150px 0px;
+	background-size: 960px 164px;
+}
 .slider > .title{
     position: absolute;
 	text-align: center;
