@@ -40,7 +40,7 @@
 			<%
 				} else {
 			%>
-				<div class="aboutus">
+				<div class="jobs">
 
 				</div>
 				<div class="aboutus_title">
