@@ -47,6 +47,9 @@
 2.重构：增加banner数据
 3.重构：调整资讯和反馈页面
 
+[shenglong-electricv_1.0.0.1 2014-03-08 张春生]
+1.重构：更新招聘页banner
+
 --备注分类
 1、新功能：
 2、Bug:
